# AutoPlacer

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: ALGORITHMS.md  API_REFERENCE.md  ARCHITECTURE.md  DATAFORMAT.md
examples/: ai_accelerator_grid.py  custom_placement.py  logic_array_basic.py  simple_counter.v  soc_peripheral_hub.py
results/ai_accelerator_grid_placed/: ai_accelerator_grid.def  ai_accelerator_grid_placement.json
results/logic_array_basic_placed/: logic_array_basic.def  logic_array_basic_placement.json
results/soc_peripheral_hub_placed/: soc_peripheral_hub.def  soc_peripheral_hub_placement.json
results/soc_placed/: soc.def  soc_placement.json
results/systolic_placed/: systolic.def  systolic_placement.json
src/: __init__.py  engine.py  main.py  models.py
src/algorithms/: annealing.py  cost.py  global_placer.py  partitioning.py
src/utils/: def_writer.py  generators.py  gui.py  parser.py  samples.py  verilog_parser.py  visualize.py
